<resources>

    <string name="app_name">Demo</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loading_inf">正在努力加载中…</string>
    <string name="title">阿里云存储服务</string>
    <string name="refresh">刷新</string>
    <string name="upload">上传</string>
    <string name="bucket">Bucket</string>
    <string name="setting">设置</string>
    <string name="bucket_select_title">选择Bucket</string>
    <string name="back_button">返回</string>
</resources>