<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:orientation="horizontal"
        android:background="#F49A0A"
        android:paddingTop="5dip"
        android:paddingBottom="2dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <TextView android:id="@+id/bucket_textview"
            android:text="@string/bucket"
            android:textColor="#FFFFFF"
            android:textSize="16dip"
            android:layout_weight="1"
            android:gravity="center" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/upload_textview" 
            android:text="@string/upload"
            android:textColor="#FFFFFF"
            android:textSize="16dip"
            android:layout_weight="1"
            android:gravity="center" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView android:id="@+id/refresh_textview" 
            android:text="@string/refresh"
            android:textColor="#FFFFFF"
            android:textSize="16dip"
            android:layout_weight="1"
            android:gravity="center" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView android:text="@string/setting"
            android:textColor="#FFFFFF"
            android:textSize="16dip"
            android:layout_weight="1" 
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_layout">
        <FrameLayout
            android:background="#F49A0A"
            android:paddingTop="5dip"
            android:paddingBottom="5dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <TextView android:id="@+id/back_button"
                android:textSize="18dip"
                android:paddingTop="3dip"
                android:paddingLeft="10dip"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:text="@string/back_button"/>
            <TextView android:text="@string/title"
                android:textSize="22dip"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:gravity="center"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content" />
        </FrameLayout>
        <com.aliyun.android.widget.PaginationListView
            android:divider="#EEE"
            android:dividerHeight="1dip"
	        android:id="@+id/listview"
	        android:background="#FFFFFF"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:cacheColorHint="#00000000" />
    </LinearLayout>
    
    
</RelativeLayout>
